messagebox has lower z-index js compiler now includes messagebox channel switcher warns, rather than automatically does things message animations fixed

--- a/trunk/v2/styles.css
+++ b/trunk/v2/styles.css
@@ -211,7 +211,7 @@ body {
   width: 100%;
   top: 30;
   left: -100%;
-  z-index: 4999;
+  z-index: 4997;
   height: 30px;
   text-align: center;
   overflow: hidden;
